--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-av": "~14.0.6",
+    "expo-camera": "~15.0.14",
+    "expo-media-library": "~16.0.4",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5"
@@ -17,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "typescript": "^5.1.3"
   },
   "private": true
